<resources>
    <string name="app_name">PictureThis</string>
    <string name="title_activity_map">Map</string>

    <string name="sign_in">Please sign in to continue.</string>
    <string name="welcome">Welcome</string>

    <string name="place">Place</string>
    <string name="list_place">All Places</string>
    <string name="new_place">Submit a New Place</string>
    <string name="settings">Settings</string>
    <string name="from_map">Find on Map</string>
    <string name="take_photo">Take Photo</string>
    <string name="cancel">Cancel</string>

    <string name="approx_address">Approximate Address:</string>

    <!-- Preferences -->
    <string name="settings_storage">Storage Settings</string>
    <string name="settings_download">Image Download Settings</string>

    <string name="set_save_images">Save Images to Device</string>
    <string name="set_save_images_summary">Enable this setting to save photos taken in the app to your device.</string>

    <string name="set_image_directory">Default Image Directory</string>
    <string name="set_image_directory_summary">Change where PictureThis stores photos taken in the app. Default: device gallery.</string>

    <string name="set_num_photos">Default Number of Photos</string>
    <string name="set_num_photos_summary">Choose how many photos will load at once when viewing a Place page.</string>
    <string name="title_activity_login">Sign in</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
</resources>
